# unfall

./: .gitignore  README.md  package.json
backend/: CMakeLists.txt  Run-backend.bat  backendConfig.json  main.cc
backend/OAIgenerated/src/: main.cpp
backend/OAIgenerated/src/handlers/: OAIApiRouter.cpp  OAIApiRouter.h  OAIComponentsApiHandler.cpp  OAIComponentsApiHandler.h  OAIConvertToConfigsApiHandler.cpp  OAIConvertToConfigsApiHandler.h  OAIDefaultApiHandler.cpp  OAIDefaultApiHandler.h  OAIDeleteInformationApiHandler.cpp  OAIDeleteInformationApiHandler.h  OAIExportOpsimulationManagerXmlApiHandler.cpp  OAIExportOpsimulationManagerXmlApiHandler.h  OAIExportSystemsConfigXmlApiHandler.cpp  OAIExportSystemsConfigXmlApiHandler.h  OAIExportToSimulationApiHandler.cpp  OAIExportToSimulationApiHandler.h  OAIIsSimulationRunningApiHandler.cpp  OAIIsSimulationRunningApiHandler.h  OAILoadSystemsConfigFileApiHandler.cpp  OAILoadSystemsConfigFileApiHandler.h  OAIPathToConvertedCasesApiHandler.cpp  OAIPathToConvertedCasesApiHandler.h  OAIRunOpSimulationManagerApiHandler.cpp  OAIRunOpSimulationManagerApiHandler.h  OAISendPCMFileApiHandler.cpp  OAISendPCMFileApiHandler.h  OAISystemsApiHandler.cpp  OAISystemsApiHandler.h  OAIVerifyPathApiHandler.cpp  OAIVerifyPathApiHandler.h
backend/OAIgenerated/src/models/: OAIBaseError.cpp  OAIBaseError.h  OAIBoolean200Response.cpp  OAIBoolean200Response.h  OAIComponentUI.cpp  OAIComponentUI.h  OAIConfigsRequest.cpp  OAIConfigsRequest.h  OAIConnection.cpp  OAIConnection.h  OAIDefault200Response.cpp  OAIDefault200Response.h  OAIEnum.h  OAIError400.cpp  OAIError400.h  OAIError400_allOf.cpp  OAIError400_allOf.h  OAIError403.cpp  OAIError403.h  OAIError403_allOf.cpp  OAIError403_allOf.h  OAIError404.cpp  OAIError404.h  OAIError404_allOf.cpp  OAIError404_allOf.h  OAIError500.cpp  OAIError500.h  OAIError500_allOf.cpp  OAIError500_allOf.h  OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  OAIInput.cpp  OAIInput.h  OAIObject.h  OAIOpSimulationManagerXmlRequest.cpp  OAIOpSimulationManagerXmlRequest.h  OAIOutput.cpp  OAIOutput.h  (+22 more)
backend/OAIgenerated/src/requests/: OAIComponentsApiRequest.cpp  OAIComponentsApiRequest.h  OAIConvertToConfigsApiRequest.cpp  OAIConvertToConfigsApiRequest.h  OAIDefaultApiRequest.cpp  OAIDefaultApiRequest.h  OAIDeleteInformationApiRequest.cpp  OAIDeleteInformationApiRequest.h  OAIExportOpsimulationManagerXmlApiRequest.cpp  OAIExportOpsimulationManagerXmlApiRequest.h  OAIExportSystemsConfigXmlApiRequest.cpp  OAIExportSystemsConfigXmlApiRequest.h  OAIExportToSimulationApiRequest.cpp  OAIExportToSimulationApiRequest.h  OAIIsSimulationRunningApiRequest.cpp  OAIIsSimulationRunningApiRequest.h  OAILoadSystemsConfigFileApiRequest.cpp  OAILoadSystemsConfigFileApiRequest.h  OAIPathToConvertedCasesApiRequest.cpp  OAIPathToConvertedCasesApiRequest.h  OAIRunOpSimulationManagerApiRequest.cpp  OAIRunOpSimulationManagerApiRequest.h  OAISendPCMFileApiRequest.cpp  OAISendPCMFileApiRequest.h  OAISystemsApiRequest.cpp  OAISystemsApiRequest.h  OAIVerifyPathApiRequest.cpp  OAIVerifyPathApiRequest.h
backend/core/common/: OPGUICore.cpp  OPGUICore.h  OPGUICoreGlobalConfig.cpp  OPGUICoreGlobalConfig.h  OPGUIInit.cpp  OPGUIInit.h
backend/core/logger/: OPGUIQtLogger.cpp  OPGUIQtLogger.h
backend/core/pcmSimulation/: OPGUIPCMSimulation.cpp  OPGUIPCMSimulation.h
backend/core/systemEditor/: OPGUISystemEditor.cpp  OPGUISystemEditor.h
backend/doc/: CMakeLists.txt  PrepareDoc.cmake
backend/doc/source/: conf.py  index.rst  requirements.txt  version.txt.in
backend/doc/source/_ext/: api_doc.py
backend/doc/source/installation_guide/: 11_system_requirements.rst  12_opgui_requirements.rst  13_installation.rst  14_launch_aplication.rst
backend/doc/source/user_guide/: 10_introduction.rst
backend/legacy/gui/: CMakeLists.txt  changelog.md
backend/legacy/gui/application/: CMakeLists.txt  openPASS.cpp  openPASS.rc
backend/legacy/gui/common/: CMakeLists.txt  CenteredTextItem.cpp  CenteredTextItem.h  DelegateComboBoxView.cpp  DelegateComboBoxView.h  DelegateDoubleView.cpp  DelegateDoubleView.h  DelegateTimeView.cpp  (+19 more)
backend/legacy/sim/: CMakeLists.txt
backend/router/: OAIApiRouterOP.cpp  OAIApiRouterOP.h  OAIComponentsApiHandlerOP.cpp  OAIComponentsApiHandlerOP.h  OAIConvertToConfigsApiHandlerOP.cpp  OAIConvertToConfigsApiHandlerOP.h  OAICustomHelpers.h  OAIDeleteInformationApiHandlerOP.cpp  OAIDeleteInformationApiHandlerOP.h  OAIExportOpsimulationManagerXmlApiHandlerOP.cpp  OAIExportOpsimulationManagerXmlApiHandlerOP.h  OAIExportSystemsConfigXmlApiHandlerOP.cpp  OAIExportSystemsConfigXmlApiHandlerOP.h  OAIExportToSimulationApiHandlerOP.cpp  OAIExportToSimulationApiHandlerOP.h  OAIIsSimulationRunningApiHandlerOP.cpp  OAIIsSimulationRunningApiHandlerOP.h  OAIPathToConvertedCasesApiHandlerOP.cpp  OAIPathToConvertedCasesApiHandlerOP.h  OAIRunOpSimulationManagerApiHandlerOP.cpp  OAIRunOpSimulationManagerApiHandlerOP.h  OAISendPCMFileApiHandlerOP.cpp  OAISendPCMFileApiHandlerOP.h  OAISystemsApiHandlerOP.cpp  OAISystemsApiHandlerOP.h  OAIVerifyPathApiHandlerOP.cpp  OAIVerifyPathApiHandlerOP.h  ServeIndexHtml.cpp  ServeIndexHtml.h
backend/test/: CMakeLists.txt  test_OPGUIConvertToConfigs.cpp  test_OPGUIConvertToConfigs.h  test_OPGUIDeleteInformationApi.cpp  test_OPGUIDeleteInformationApi.h  test_OPGUIExportComponentApi.cpp  test_OPGUIExportComponentApi.h  test_OPGUIExportOpsimulationManagerXmlApi.cpp  test_OPGUIExportOpsimulationManagerXmlApi.h  test_OPGUIExportSystemsApi.cpp  test_OPGUIExportSystemsApi.h  test_OPGUIExportToSimulation.cpp  test_OPGUIExportToSimulation.h  test_OPGUILoadComponentsApi.cpp  test_OPGUILoadComponentsApi.h  test_OPGUILoadSystemsApi.cpp  test_OPGUILoadSystemsApi.h  test_OPGUIPathToConvCases.cpp  test_OPGUIPathToConvCases.h  test_OPGUIQtLogger.cpp  test_OPGUIQtLogger.h  test_OPGUIRunOpSimulationManagerApi.cpp  test_OPGUIRunOpSimulationManagerApi.h  test_OPGUIVerifyPathApi.cpp  test_OPGUIVerifyPathApi.h  test_OPGUIsendPCMFile.cpp  test_OPGUIsendPCMFile.h  test_helpers.cpp  test_helpers.h  test_main.cpp  test_scene.db
(+1898 files in other folders)
